--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edustone",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "start": "expo start --dev-client",
@@ -15,6 +15,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-asset": "~8.6.1",
     "expo-font": "~10.2.0",
+    "expo-linear-gradient": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
