Stone Page Initialized + Font Update
- Stone Page has been initialized
- Font has been updated
- Background image was changed to different color for Stone page

--- a/ios/EduStone/Info.plist
+++ b/ios/EduStone/Info.plist
@@ -38,6 +38,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Fonts/neodgm.ttf</string>
+		<string>Fonts/DungGeunMo.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
