--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^0.16.19",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.4",
     "accordion-collapse-react-native": "^1.1.1",
     "expo": "^46.0.10",
     "expo-app-loading": "~2.1.0",
@@ -23,6 +24,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
