Font and Nav Bar Update
- Navigation Bar Push
- New Fonts Added Push

--- a/ios/EduStone/Info.plist
+++ b/ios/EduStone/Info.plist
@@ -37,8 +37,9 @@
 	</dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Fonts/neodgm.ttf</string>
-		<string>Fonts/DungGeunMo.ttf</string>
+		<string>Fonts/BMDOHYEON_ttf.ttf</string>
+		<string>Fonts/NexaTextDemo-Light.ttf</string>
+		<string>Fonts/NexaTextDemo-Bold.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
