--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.14",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "accordion-collapse-react-native": "^1.1.1",
     "expo": "^46.0.10",
     "expo-app-loading": "~2.1.0",
