--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
